# Shared-Memory

./: CMakeLists.txt  README.md  Resource.h  SharedMemory.cpp  reader.cpp
